add customer module and test from postman
