# server/routes/product.route.js
@@ -6,24 +6,21 @@ const Product = require('../models/product.model');
 const router = express.Router();
 module.exports = router;
 router.get('/', asyncHandler(getAllProducts));
-router.delete('/:id', asyncHandler(deleteProduct));
-router.put('/update', asyncHandler(updateProduct));
 router.post('/create', asyncHandler(insert));
+router.put('/update', asyncHandler(updateProduct));
+router.delete('/:id', asyncHandler(deleteProduct));
 router.post('/createMany', asyncHandler(insertMany));
 router.post('/deleteMany', asyncHandler(deleteMany));
+router.post('/updateMany', asyncHandler(updateMany));
 
-
-async function deleteMany(req, res, next) {
-  await productCtrl.deleteMany(req.body).then((data) => {
-    return res.json({ success: true, data: data, message: "Success Deleted" });
+async function getAllProducts(req, res) {
+  await productCtrl.allProducts().then(products => {
+    return res.json({ success: true, products: products });
   }).catch((error) => {
-    if (error.code === 11000) {
-      let msg = error.keyPattern.barcode == 1 ? 'Product Barcode already exist!' : 'Product Name already exist!'
-      return res.json({ success: false, message: msg });
-    }
     return res.json({ success: false, message: error.message });
-  });
+  })
 }
+
 async function insert(req, res, next) {
   await productCtrl.insert(req.body).then((product) => {
     return res.json({ success: true, product: product, message: "Success Add" });
@@ -35,6 +32,7 @@ async function insert(req, res, next) {
     return res.json({ success: false, message: error.message });
   });
 }
+
 async function updateProduct(req, res, next) {
   await productCtrl.updateProduct(req.body).then((product) => {
     return res.json({ success: true, product: product, message: "Success Update" });
@@ -46,12 +44,27 @@ async function updateProduct(req, res, next) {
     return res.json({ success: false, message: error.message });
   });
 }
+
 async function deleteProduct(req, res, next) {
   await productCtrl.deleteProduct(req.params.id).then((product) => {
     return res.json({ success: true, message: "Success Delete" });
   }).catch((error) => {
     return res.json({ success: false, message: error.message });
   });
+}
+
+async function updateMany(req, res, next) {
+  var updatedData = [];
+  await Promise.all(
+    req.body.map(async obj => {
+      await productCtrl.updateProduct(obj).then(async (d) => {
+        if (d && d.barcode) {
+          await updatedData.push(d);
+        }
+      })
+    })
+  );
+  return res.json({ success: true, products: updatedData });
 }
 
 async function insertMany(req, res, next) {
@@ -66,22 +79,14 @@ async function insertMany(req, res, next) {
   });
 }
 
-async function getAllProducts(req, res) {
-  await productCtrl.allProducts().then(products => {
-    return res.json({ success: true, products: products });
+async function deleteMany(req, res, next) {
+  await productCtrl.deleteMany(req.body).then((data) => {
+    return res.json({ success: true, data: data, message: "Success Deleted" });
   }).catch((error) => {
+    if (error.code === 11000) {
+      let msg = error.keyPattern.barcode == 1 ? 'Product Barcode already exist!' : 'Product Name already exist!'
+      return res.json({ success: false, message: msg });
+    }
     return res.json({ success: false, message: error.message });
-  })
+  });
 }
-
-// function products(req, res) {
-//   var products = req.products;
-//   products = products;
-//   res.json({products});
-// }
-
-// function product(req, res) {
-//   var product = req.product;
-//   res.json({ product });
-// }
-
